--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "telegraf": "^4.8.5"
   }
 }
